--- a/src/views/partials/match_details_body.hbs
+++ b/src/views/partials/match_details_body.hbs
@@ -1,6 +1,6 @@
 <div class="container min-h-screen bg-primary-0">
     <div class="back-area max-w-[450px] mx-auto w-full flex items-center justify-start bg-primary-14">
-        <div class="container py-[10px] px-[15px] ">
+        <div class="container pt-[25px] pb-[10px] px-[15px] ">
             <div class="back-area-icon">
                 <a href="liveMatch.html"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                         viewBox="0 0 28 28" fill="none">
@@ -73,7 +73,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="match-details-body px-[20px] py-[10px] h-[calc(100vh-410px)] overflow-y-auto" id="chat">
+            <div class="match-details-body px-[20px] py-[10px] h-[calc(100vh-425px)] overflow-y-auto" id="chat">
                 <div class="comment mb-[16px]">
                     <div class="comment-main flex items-center justify-start gap-[8px]">
                         <div class="user  min-w-[40px] ">
@@ -199,7 +199,12 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>{{!--- END CHAT ---}}
+
+            <div class="overview-area d-none h-[calc(100vh-425px)] overflow-y-auto" id="overview"></div>{{!--- END OVERVIEW ---}}
+            <div class="line-ups d-none h-[calc(100vh-425px)] overflow-y-auto" id="line-ups"></div>{{!--- END LINE UPS ---}}
+            <div class="predictions d-none h-[calc(100vh-425px)] overflow-y-auto" id="predictions"></div>{{!--- END  PREDICTIONS ---}}
+
         </div>
     </div>
 
