--- a/src/views/partials/components/bottom_nav.hbs
+++ b/src/views/partials/components/bottom_nav.hbs
@@ -57,7 +57,7 @@
                 </a>
             </li>
             <li class="w-full">
-              <a href="" class="text-center flex justify-center items-center gap-[4px] flex-col py-1 px-1"> 
+              <a href="account.html" class="text-center flex justify-center items-center gap-[4px] flex-col py-1 px-1"> 
                   <div class="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 21 21" fill="none">
                         <g opacity="0.3" class="{{#if activeSetting}} opacity-100{{/if}}">
