--- a/src/views/partials/components/recent_post_card.hbs
+++ b/src/views/partials/components/recent_post_card.hbs
@@ -1,25 +1,41 @@
-<a href="recentPostDetails.html">
-    <div class="recent-post-card pb-[16px]">
 
-    <div class="recent-post-title px-[15px] mb-[11px]">
+<a href="recentPostDetails.html" class="block">
+    <div class="recent-post-card cursor-pointer pb-[16px] pt-[18px] border-b border-primary-0.6 border-solid">
+    <div class="user-info-area px-[15px] mb-[10px]">
+        <div class="user-info-title">
+            <h4 class="font-satoshi font-medium text-[14px]/[20px] text-primary-1 mb-[8px] uppercase">Soccer news</h4>
+        </div>
+
+        <div class="user-info-main flex items-center w-[full] justify-between">
+            <div class="post-user flex w-full gap-[12px] justify-start items-center">
+                <div class="user-img">
+                    <img src="/images/png/user_profile.png" alt="" class="w-[36px] h-[36px] rounded-full">
+                </div>
+                <div class="user-title">
+                    <h4 class="text-primary-10 font-bold font- font-satoshi text-sm/[20px] not-italic block">Thai Dieu Vy</h4>
+                </div>
+            </div>
+            <div class="post-time">
+                <span class="font-satoshi font-medium not-italic text-primary-1 text-[13px]/[20px] text-nowrap">Sep 22, 2023</span>
+            </div>
+        </div>
+    </div>
+    <div class="recent-post-title px-[15px] mb-[7px]">
         <h3 class="font-satoshi font-bold text-primary-10 text-[20px]/[32px]">The Miracle Comeback: How
             Argentina Defied the Odds ⚽️🌟</h3>
     </div>{{!-- END POST TITLE ---}}
-    <div class="recent-post-img">
-        <img class="block w-full" src="/images/png/Articles.png" alt="">
-    </div>{{!-- END POST IMAGE ---}}
-
     <div class="recent-post-body px-[15px]">
-        <div class="recent-body-main py-[11px] border-b border-primary-0.6 border-solid">
-            <p class="font-satoshi font-medium not-italic text-primary-1 text-[14px]/[20px] mb-4">Get ready to
-                witness the stuff of legends! Picture this: Argentina trailing by two goals with only
-                minutes left on the clock. The odds seemed insurmountable, but our players refused to give
-                up. <a href="#" class="text-primary">Read more</a></p>{{!-- END POST DESCRIPTION ---}}
-            <div class="post-reaction-area flex items-center justify-between gap-2">
-                <div class="post-reaction-left">
-                    <span class="font-satoshi font-medium not-italic text-primary-1 text-sm/[24px]">5 hours
-                        ago</span>
-                </div>
+        <div class="recent-body-main ">
+            <p class="font-satoshi font-medium not-italic text-primary-1 text-[15px]/[20px] mb-4">Get ready to
+                witness the stuff of legends! Picture this: Argentina trailing by two goals with only minutes left
+                on the clock. The odds seemed insurmountable, but our players refused to give up. <a href="#"
+                    class="text-primary">Read more</a></p>{{!-- END POST DESCRIPTION ---}}
+
+            <div class="recent-post-img mb-[14px]">
+                <img class="block w-full rounded-[8px]" src="/images/png/Articles.png" alt="">
+            </div>{{!-- END POST IMAGE ---}}
+
+            <div class="post-reaction-area flex items-center justify-end gap-2">
                 <div class="post-reaction-right">
                     <ul class="flex items-center justify-end gap-4">
                         <li
@@ -34,85 +50,4 @@
         </div>
     </div>
 </div>
-
-</a>
-
-
-<a href="recentPostDetails.html">
-    <div class="recent-post-card pb-[16px]">
-
-    <div class="recent-post-title px-[15px] mb-[11px]">
-        <h3 class="font-satoshi font-bold text-primary-10 text-[20px]/[32px]">The Miracle Comeback: How
-            Argentina Defied the Odds ⚽️🌟</h3>
-    </div>{{!-- END POST TITLE ---}}
-    <div class="recent-post-img">
-        <img class="block w-full" src="/images/png/Articles.png" alt="">
-    </div>{{!-- END POST IMAGE ---}}
-
-    <div class="recent-post-body px-[15px]">
-        <div class="recent-body-main py-[11px] border-b border-primary-0.6 border-solid">
-            <p class="font-satoshi font-medium not-italic text-primary-1 text-[14px]/[20px] mb-4">Get ready to
-                witness the stuff of legends! Picture this: Argentina trailing by two goals with only
-                minutes left on the clock. The odds seemed insurmountable, but our players refused to give
-                up. <a href="#" class="text-primary">Read more</a></p>{{!-- END POST DESCRIPTION ---}}
-            <div class="post-reaction-area flex items-center justify-between gap-2">
-                <div class="post-reaction-left">
-                    <span class="font-satoshi font-medium not-italic text-primary-1 text-sm/[24px]">5 hours
-                        ago</span>
-                </div>
-                <div class="post-reaction-right">
-                    <ul class="flex items-center justify-end gap-4">
-                        <li
-                            class="flex items-center justify-end gap-1 font-satoshi font-medium not-italic text-primary-1 text-sm/[20px]">
-                            6 <img src="/images/svg/like.svg" alt=""></li>
-                        <li
-                            class="flex items-center justify-end gap-1 font-satoshi font-medium not-italic text-primary-1 text-sm/[20px]">
-                            10 <img src="/images/svg/comment.svg" alt=""></li>
-                    </ul>
-                </div>
-            </div>{{!-- END POST REACTION AREA ---}}
-        </div>
-    </div>
-</div>
-
-</a>
-
-
-<a href="recentPostDetails.html">
-    <div class="recent-post-card pb-[16px]">
-
-    <div class="recent-post-title px-[15px] mb-[11px]">
-        <h3 class="font-satoshi font-bold text-primary-10 text-[20px]/[32px]">The Miracle Comeback: How
-            Argentina Defied the Odds ⚽️🌟</h3>
-    </div>{{!-- END POST TITLE ---}}
-    <div class="recent-post-img">
-        <img class="block w-full" src="/images/png/Articles.png" alt="">
-    </div>{{!-- END POST IMAGE ---}}
-
-    <div class="recent-post-body px-[15px]">
-        <div class="recent-body-main py-[11px] border-b border-primary-0.6 border-solid">
-            <p class="font-satoshi font-medium not-italic text-primary-1 text-[14px]/[20px] mb-4">Get ready to
-                witness the stuff of legends! Picture this: Argentina trailing by two goals with only
-                minutes left on the clock. The odds seemed insurmountable, but our players refused to give
-                up. <a href="#" class="text-primary">Read more</a></p>{{!-- END POST DESCRIPTION ---}}
-            <div class="post-reaction-area flex items-center justify-between gap-2">
-                <div class="post-reaction-left">
-                    <span class="font-satoshi font-medium not-italic text-primary-1 text-sm/[24px]">5 hours
-                        ago</span>
-                </div>
-                <div class="post-reaction-right">
-                    <ul class="flex items-center justify-end gap-4">
-                        <li
-                            class="flex items-center justify-end gap-1 font-satoshi font-medium not-italic text-primary-1 text-sm/[20px]">
-                            6 <img src="/images/svg/like.svg" alt=""></li>
-                        <li
-                            class="flex items-center justify-end gap-1 font-satoshi font-medium not-italic text-primary-1 text-sm/[20px]">
-                            10 <img src="/images/svg/comment.svg" alt=""></li>
-                    </ul>
-                </div>
-            </div>{{!-- END POST REACTION AREA ---}}
-        </div>
-    </div>
-</div>
-
 </a>
