--- a/src/views/partials/recent_post_body.hbs
+++ b/src/views/partials/recent_post_body.hbs
@@ -1,7 +1,7 @@
 <div class="container h-screen bg-primary-0 pb-[77px]">
-    <div class="back-area max-w-[450px] mx-auto  px-[15px] py-[10px] bg-primary-0">
+    <div class="back-area max-w-[450px] mx-auto  px-[15px] py-[10px] bg-primary-0 border-b border-primary-0.6 border-solid">
             <div class="back-area-text flex justify-start items-center gap-[10px]">
-                <h3 class="font-satoshi font-bold text-[28px]/[38px] text-primary-10">Recent Post</h3>
+                <h3 class="font-satoshi font-bold text-[26px]/[38px] text-primary-10">Recent Post</h3>
                 <img class="block cursor-pointer w-[24px] min-w-[24px] h-[24px]" data-modal="modal-1" src="/images/svg/recent-post.svg" alt="">
             </div>
     </div>{{!---END RECENT POST HEADER--}}
